# HW1

./: CMakeLists.txt
HW1-main/: BlockChain.cpp  BlockChain.h  Transaction.cpp  Transaction.h  Utilities.cpp  Utilities.h  main.cpp  mtm_blockchain  test_results.html
HW1-main/tests/: compress.source  compress.target.expected  format.target.expected  hash.source  hash.target.expected  verify.expected
